# segystack_cpp

./: .gitignore  CMakeLists.txt  README.md  config.txt
include/: Config.hpp  util.hpp
include/nmo/: nmo.hpp
include/sgylib/: BinFieldMap.hpp  SegyReader.hpp  SegyUtil.hpp  SegyWriter.hpp  TraceFieldMap.hpp  TraceMap.hpp
src/: Config.cpp  main.cpp
src/nmo/: nmo.cpp
src/sgylib/: SegyReader.cpp  SegyUtil.cpp  SegyWriter.cpp  TraceMap.cpp
